Add var: OPTIONAL_URL, OPTIONAL_URI, OPTIONAL_GLOBAL_FILE, OPTIONAL_USER_FILE; var URL and URI use validator instead of converter to validate its value; updated related unit tests;